--- a/app/assets/stylesheets/general/home.scss
+++ b/app/assets/stylesheets/general/home.scss
@@ -1,5 +1,6 @@
 #home {
   margin: 0;
+  position: relative;
   z-index: 0;
   
 
