--- a/app/assets/stylesheets/general/pattern/_init.scss
+++ b/app/assets/stylesheets/general/pattern/_init.scss
@@ -12,7 +12,7 @@ body {
   main[role="main"] {
     background: transparent;
     margin: 0;
-    min-height: calc(100vh - 64px);
+    min-height: 100vh;
     padding-top: $header-height;
     z-index: 0;
   }
